# LearnGL-Playground

./: .clang-format  .cmake-format.py  CMakeLists.txt  LICENSE  README.md
cmake/: deps.cmake  warnings.cmake
src/: BaseApplication.hpp  main.c  main.cpp  utils.c  utils.h
src/Shader/: Shader.cpp  Shader.hpp
src/Utils/: Utils.cpp  Utils.hpp
src/ch1-hello-triangle/: HelloTriangle.cpp  HelloTriangleFiles.hpp.in  horizontal-shader.fs  vertical-shader.fs
src/ch1-triangle/: triangle.c
src/ch2-shaders/: example.fs  example.vs  shading.c  shading_files.cmake
src/ch2-shading/: Shading.cpp  ShadingFiles.hpp.in  shader.fs  shader.vs
src/ch3-texture/: Texture.cpp  TextureFiles.hpp.in  shader.fs  shader.vs  shades.fs  shades.vs  stb_image.h  texture.c  texture_files.cmake
src/ch4-matrix/: Matrix.cpp  MatrixFiles.hpp.in  shader.fs  shader.vs
src/shader/: shader.c  shader.h
